<resources>
    <string name="app_name">XpeApp</string>
    <string name="xpeho_logo_content">Logo Xpeho</string>
    <string name="login_page_email">Email</string>
    <string name="login_page_password">Mot de passe</string>
    <string name="login_page_button">SE CONNECTER</string>
    <string name="login_page_google_button">Se connecter avec Google</string>
    <string name="vacation_title_app_bar">Congés payés</string>
    <string name="vacation_remaining_days">Jours restants : %s jour(s)</string>
    <string name="vacation_my_request_title">Mes demandes</string>
    <string name="newsletters_page_title">Newsletters</string>
    <string name="newsletter_card_date">Newsletter du %s</string>
    <string name="newsletter_detail_title">Détail de la newsletter</string>
    <string name="newsletter_detail_summary_title">Sommaire de la newsletter</string>
    <string name="newsletter_detail_open_newsletter">Ouvrir la newsletter</string>
    <string name="colleague_title">Mes collègues</string>
    <string name="happy_birthday_to">Joyeux anniversaire %s !</string>
    <string name="colleague_phone_book">Annuaire</string>
    <string name="colleague_birthday_list">La liste des anniversaires</string>
    <string name="colleague_vacation">Les personnes en congés</string>
    <string name="home_page_error">Une erreur est survenue !</string>
    <string name="home_page_reload">Recharger l\'application</string>
    <string name="login_page_error_title">Erreur de connexion</string>
    <string name="home_disconnection">Souhaitez-vous vraiment vous déconnecter ?</string>
    <string name="login_page_enter_email_warning">Veuillez entrer votre email</string>
    <string name="login_page_enter_password_warning">Veuillez entrer votre mot de passe</string>
    <string name="qvst_title">QVST</string>
    <string name="qvst_description">La qualité de vie au travail vise d’abord le travail, les conditions de travail et la possibilité qu’elles ouvrent ou non de « faire du bon travail » dans une bonne ambiance, dans le cadre de son organisation.</string>
    <string name="qvst_leading">Nom de la campagne</string>
    <string name="qvst_end_date">Date de fin</string>
    <string name="qvst_campaign">Campagne</string>
    <string name="qvst_campaign_detail_submit_answers">Valider les réponses</string>
    <string name="qvst_answers_saved">Réponses enregistrés !</string>
    <string name="qvst_answers_saved_action_label">OK</string>
    <string name="qvst_answers_saved_title">QVST</string>
    <string name="qvst_campaign_detail_all_questions_answered">Vous avez répondu à toutes les questions</string>
    <string name="qvst_campaign_detail_questions_answered">
        Vous avez répondu à %s questions sur %s
    </string>
    <string name="qvst_campaign_detail_answered_questions">Questions répondues</string>
    <string name="qvst_campaign_detail_answer">Réponse : %s</string>
    <string name="qvst_campaign_detail_theme">Thème : %s</string>
    <string name="qvst_campaign_detail_question">Question : %s</string>
    <string name="qvst_campaign_detail_end_date">Date de fin : %s</string>
    <string name="loading">Chargement…</string>
    <string name="campaign_days_error">Erreur jours campagne : %1$s</string>
    <string name="remaining_days_campaign">%1$s > %2$s jours restants</string>
    <string name="profil_page_profil_label">Profil</string>
    <string name="profil_page_firstname"> Prénom</string>
    <string name="profil_page_lastname">Nom</string>
    <string name="profil_page_modify_password">Modifier mon mot de passe</string>
    <string name="profil_page_modify_password_cancel">Annuler</string>
    <string name="profil_page_modify_password_save">Valider</string>
    <string name="profil_page_modify_password_initial">Mot de passe actuel</string>
    <string name="profil_page_modify_password_new">Nouveau mot de passe</string>
    <string name="profil_page_modify_password_confirm">Nouveau mot de passe</string>
    <string name="profil_page_modify_password_success">Mot de passe modifié avec succès</string>
    <string name="profil_page_modify_password_error">Erreur de mot de passe</string>
    <string name="profil_page_modify_password_loading_message">Chargement des données…</string>
    <string name="profil_page_modify_password_content_description_edit_password">ModificationDuMotDePassePage</string>
    <string name="profil_page_modify_password_content_description_profile">PageDeProfile</string>
    <string name="about_view_about_label">À propos</string>
    <string name="about_view_ok_label">OK</string>
    <string name="about_view_version_label">Version: </string>
    <string name="about_view_confidentiality_label">Politiques de confidentialité</string>
    <string name="about_view_propriety_label">Propriétaire:</string>

</resources>